--- a/src/main/webapp/Views/Ventas/nuevaVenta.xhtml
+++ b/src/main/webapp/Views/Ventas/nuevaVenta.xhtml
@@ -11,7 +11,8 @@
 
             <ui:define name="content">
                 <h:form id="ventaForm">
-                    <growl id="msg" />
+                    <p:growl id="growl" showDetail="true" />
+                    <p:growl id="growl-sticky" for="sticky-key" showDetail="true" sticky="true" />
 
                     <div style="font-weight: bold; background-color: #036fab; 
                          color: white; text-align: center; height: 25px;">
@@ -47,7 +48,7 @@
                                 <p:outputLabel value="Cantidad: "/>
                                 <p:inputNumber value="#{VentaMB.cantidad}" modifyValueOnWheel="true" />
                                 <div/>
-                                <p:commandButton value="Agregar" actionListener="#{VentaMB.AgregarProductoLista}" update="itemsTable busquedaProductoPanel FactData" />
+                                <p:commandButton value="Agregar" actionListener="#{VentaMB.AgregarProductoLista}" update="itemsTable busquedaProductoPanel FactData growl" />
                             </h:panelGrid>
                         </p:panel>
                     </div>
