--- a/src/main/webapp/Views/Ventas/nuevaProforma.xhtml
+++ b/src/main/webapp/Views/Ventas/nuevaProforma.xhtml
@@ -11,8 +11,9 @@
         <ui:composition template="../../Plantilla/Plantilla.xhtml">
 
             <ui:define name="content">
-                <h:form id="proformaForm" >
-                    <growl id="msg" />
+                <h:form id="ventaForm">
+                    <p:growl id="growl" showDetail="true" />
+                    <p:growl id="growl-sticky" for="sticky-key" showDetail="true" sticky="true" />
 
                     <div style="font-weight: bold; background-color: #036fab; 
                          color: white; text-align: center; height: 25px;">
@@ -26,12 +27,12 @@
                                 <p:inputText id="IdNumCliente" value="#{ProformaMB.clienteIdNum}" />
                                 <p:outputLabel value="Nombre: "/>
                                 <p:inputText id="NombreCliente" value="#{ProformaMB.clienteNombre}" disabled="true" />
-                                <p:commandButton actionListener="#{ProformaMB.BuscarClienteVenta}" value="Buscar" update="proformaForm" />
+                                <p:commandButton actionListener="#{ProformaMB.BuscarClienteVenta}" value="Buscar" update="ventaForm" />
                             </h:panelGrid>
                         </p:panel>
 
 
-                        <p:panel id="busquedaProductoPanel" header="Búsqueda de productos" style="width: 45%; position: relative" >
+                        <p:panel id="busquedaProductoPanel" header="Búsqueda de productos" style="widht: 45%; position: relative" >
                             <h:panelGrid columns="3">
                                 <p:outputLabel value="Codigo: "/>
                                 <p:inputText id="ItemCodigo" value="#{ProformaMB.codigoProducto}" />
@@ -43,12 +44,12 @@
                                 <p:inputText id="NombreProducto" value="#{ProformaMB.nombreProducto}" disabled="true" />
                                 <div/>
                                 <p:outputLabel value="Precio: "/>
-                                <p:inputNumber id="priceTextBox" value="#{ProformaMB.precioProducto}"/>
+                                <p:inputNumber id="priceTextBox" value="#{ProformaMB.precioProducto}" modifyValueOnWheel="false" disabled="true" />
                                 <div/>
                                 <p:outputLabel value="Cantidad: "/>
                                 <p:inputNumber value="#{ProformaMB.cantidad}" modifyValueOnWheel="true" />
                                 <div/>
-                                <p:commandButton value="Agregar" actionListener="#{ProformaMB.AgregarProductoLista}" update="itemsTable busquedaProductoPanel FactData" />
+                                <p:commandButton value="Agregar" actionListener="#{ProformaMB.AgregarProductoLista}" update="itemsTable busquedaProductoPanel FactData growl" />
                             </h:panelGrid>
                         </p:panel>
                     </div>
@@ -56,15 +57,18 @@
 
                     <div style="height: 30px" />
 
-                    <p:dataTable var="ListaItems" id="itemsTable" value="#{ProformaMB.listaDetalle}" >
+                    <p:dataTable var="ListaItems" id="itemsTable" value="#{ProformaMB.listaDetalle}" selection="#{ProformaMB.productoSeleccionado}" 
+                                 rowKey="#{ListaItems.producto.codigoAux}" selectionMode="single" >
+
                         <f:facet name="header">
                             Items
                         </f:facet>
-                        
+
                         <p:column headerText="Eliminar" >
-                            <p:commandButton icon="pi pi-trash" styleClass="ui-button-danger" />
+                            <p:commandButton icon="pi pi-trash" styleClass="ui-button-danger" process="@this" actionListener="#{ProformaMB.EliminarProducto(ListaItems)}" 
+                                             update="subtotalVenta FactData" />
                         </p:column>
-                        
+
                         <p:column headerText="Cod">
                             <h:outputText value="#{ListaItems.producto.codigoAux}" />
                         </p:column>
@@ -74,7 +78,7 @@
                         </p:column>
 
                         <p:column headerText="Precio Unitario">
-                            <h:outputText value="#{ListaItems.precio}" >
+                            <h:outputText value="#{ListaItems.producto.precioUnitario}" >
                                 <f:convertNumber pattern="#0.00" />
                             </h:outputText>
                         </p:column>
@@ -97,25 +101,29 @@
                             </h:outputText>
                         </p:column>
 
-                        <p:columnGroup type="footer">
-                            <p:row>
-                                <p:column colspan="5" style="text-align:right" footerText="Total:"/>
-                                <p:column style="text-align:left" footerText="#{ProformaMB.subTotalVenta}"/>
+                        <p:columnGroup type="footer" id="colgrp">
+                            <p:row id="rowfoot">
+                                <p:column colspan="6" style="text-align:right" footerText="Total:"/>
+                                <p:column style="text-align:left" footerText="#{ProformaMB.subTotalVenta}" id="subtotalVenta" />
                             </p:row>
                         </p:columnGroup>
                     </p:dataTable>
-                    <p:button value="Generar Factura" onclick="PF('NewSale').show()" style="float: right; margin: 20px 0px;" />
+                    <h:panelGrid columns="2">
+                        <p:button value="Detalle impuestos" onclick="PF('NewSale').show()" style="float: right; margin: 20px 0px;" />
+                        <p:commandButton value="Enviar Proforma" />
+                    </h:panelGrid>
                     <div style="margin-top:50px" />
                 </h:form>
-                
+
+
                 <!--Datos de facturacion-->
-                <p:dialog id="FactData" header="Datos de facturacion de la proforma" widgetVar="NewSale"
+                <p:dialog id="FactData" header="Datos de facturacion" widgetVar="NewSale"
                           height="100%" width="70%" showEffect="fade">
                     <h:form>
                         <p:panel header="Valor de venta" style="text-align: left; width: 100%; float: right">
                             <h:panelGrid columns="2">
                                 <p:outputLabel value="Subtotal 12%"/>
-                                <p:inputText value="#{ProformaMB.subtotal12}" disabled="true"/>
+                                <p:inputText value="#{ProformaMB.subtotal12}" disabled="true" />
                                 <p:outputLabel value="Subtotal 0%"/>
                                 <p:inputText value="#{ProformaMB.subtotal0}" disabled="true"/>
                                 <p:outputLabel value="DESCUENTO"/>
@@ -127,7 +135,6 @@
                                 <p:outputLabel value="TOTAL"/>
                                 <p:inputText value="#{ProformaMB.total}" disabled="true"/>
                                 <div/>
-                                <p:commandButton value="Ingresar proforma" type="button" onclick=""/>
                             </h:panelGrid>
                         </p:panel>
                     </h:form >
