--- a/src/main/webapp/Views/Ventas/nuevaProforma.xhtml
+++ b/src/main/webapp/Views/Ventas/nuevaProforma.xhtml
@@ -44,7 +44,7 @@
                                 <p:inputText id="NombreProducto" value="#{ProformaMB.nombreProducto}" disabled="true" />
                                 <div/>
                                 <p:outputLabel value="Precio: "/>
-                                <p:inputNumber id="priceTextBox" value="#{ProformaMB.precioProducto}" modifyValueOnWheel="false" disabled="true" />
+                                <p:inputNumber id="priceTextBox" value="#{ProformaMB.precioProducto}" modifyValueOnWheel="false" disabled="false" />
                                 <div/>
                                 <p:outputLabel value="Cantidad: "/>
                                 <p:inputNumber value="#{ProformaMB.cantidad}" modifyValueOnWheel="true" />
